--- a/lw1.cabal
+++ b/lw1.cabal
@@ -20,6 +20,9 @@ executable lw1
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base >=4.8 && <4.9,
-                       options
+                       options,
+                       cassava,
+                       bytestring,
+                       vector
   hs-source-dirs:      src
   default-language:    Haskell2010
