--- a/lw1.cabal
+++ b/lw1.cabal
@@ -23,6 +23,7 @@ executable lw1
                        options,
                        cassava,
                        bytestring,
-                       vector
+                       vector,
+                       random
   hs-source-dirs:      src
   default-language:    Haskell2010
